<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_alpha" />

            <SeekBar
                android:id="@+id/seek_bar_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_red" />

            <SeekBar
                android:id="@+id/seek_bar_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_green" />

            <SeekBar
                android:id="@+id/seek_bar_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_blue" />

            <SeekBar
                android:id="@+id/seek_bar_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="8dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/color_view"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_set_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/button_label_set_color"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>